--- a/src/app/health-screening/colon-cancer/colon-cancer.component.scss
+++ b/src/app/health-screening/colon-cancer/colon-cancer.component.scss
@@ -31,7 +31,7 @@
     background-color: var(--container-background-color);
     color: var(--text-color);
     max-width: 600px;
-    margin: 0 auto;
+    margin: 15px auto;
     padding: 20px;
   }
   
@@ -105,6 +105,11 @@
 
   ::ng-deep .mdc-text-field--filled:not(.mdc-text-field--disabled) .mdc-floating-label{
     color: inherit !important;
+  }
+
+  ::ng-deep .mat-mdc-card-content:last-child{
+    font-size: 16px;
+    font-family: var(--fontFamily);
   }
   
   mat-radio-button {
