--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -36,6 +36,10 @@ mat-slide-toggle {
   color: var(--text-color); /* Dynamic text color */
 }
 
+.screening-section {
+  margin-top: 80px; /* Pushes the screening section down */
+}
+
 /* Language switcher styles */
 .language-switcher {
   position: fixed; /* Fixes the position relative to the viewport */
@@ -46,6 +50,7 @@ mat-slide-toggle {
   padding: 10px;
   border-radius: 5px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2); /* Optional: Adds a slight shadow to make it stand out */
+  margin-bottom: 50px; 
 }
 
 select {
