--- a/src/app/health-screening/chlamydia/chlamydia.component.scss
+++ b/src/app/health-screening/chlamydia/chlamydia.component.scss
@@ -29,7 +29,7 @@ body.dark-theme {
   background-color: var(--container-background-color);
   color: var(--text-color);
   max-width: 600px;
-  margin: 0 auto;
+  margin: 15px auto;
   padding: 20px;
 }
 
@@ -106,6 +106,11 @@ mat-form-field {
 
 ::ng-deep .mdc-text-field--filled:not(.mdc-text-field--disabled) .mdc-text-field__input{
   color: inherit !important;
+}
+
+::ng-deep .mat-mdc-card-content:last-child{
+  font-size: 16px;
+  font-family: var(--fontFamily);
 }
 
 /* Radio group and buttons */
