--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -29,7 +29,7 @@ body.dark-theme {
 /* Apply theme variables */
 .screening-section {
   margin: 80px 20px 20px 20px;
-  background-color: var(--main-background-color);
+  //background-color: var(--main-background-color);
 }
 
 .app-title {
@@ -42,6 +42,7 @@ body.dark-theme {
   font-size: 24px;
   font-weight: 500;
   text-align: center;
+  margin-top: -20px;
   margin-bottom: 40px;
   color: var(--blackColor);
   font-family: var(--fontFamily);
@@ -68,7 +69,7 @@ body.dark-theme {
   height: 300px;
   margin-bottom: 20px;
   text-decoration: none;
-  background-color: var(--box-background-color);
+  background-color: var(--main-background-color);
   border: 1px solid #ddd;
   border-radius: 12px;
   transition: background-color 0.3s, transform 0.3s;
