--- a/src/app/health-screening/chlamydia/chlamydia.component.scss
+++ b/src/app/health-screening/chlamydia/chlamydia.component.scss
@@ -124,3 +124,7 @@ mat-radio-button {
   margin-right: 10px;
   color: var(--text-color); /* Ensure radio button text is visible */
 }
+
+::ng-deep .mat-mdc-card {
+  margin: 30px;
+}
