--- a/src/app/main-layout/main-layout.component.scss
+++ b/src/app/main-layout/main-layout.component.scss
@@ -13,7 +13,7 @@
 }
 
 .sidenav.collapsed {
-  width: 80px; /* Width for the collapsed sidebar (just icons) */
+  width: 70px; /* Width for the collapsed sidebar (just icons) */
 }
 
 .toolbar-content {
@@ -42,11 +42,11 @@
 mat-list-item {
   display: flex;
   align-items: center;
-  padding: 10px 16px;
+  padding: 10px 8px;
   border-radius: 8px;  /* Rounding the corners for a smooth effect */
   transition: background-color 0.3s ease;
 
-  mat-icon {
+  .mat-icon {
     margin-right: 16px;
     color: #5a5a5a;
     font-size: 24px;
@@ -55,7 +55,7 @@ mat-list-item {
   }
 
   /* Collapsed state */
-  .sidenav.collapsed mat-icon {
+  .sidenav.collapsed mat-list-item .mat-icon {
     margin-right: 0;
   }
 
@@ -64,9 +64,10 @@ mat-list-item {
     font-size: 16px;
     line-height: 24px;
     transition: opacity 0.3s ease, color 0.3s ease;
+    opacity: 1;
   }
 
-  .sidenav.collapsed span {
+  .sidenav.collapsed mat-list-item span {
     display: none;
   }
 
@@ -94,6 +95,8 @@ mat-list-item {
 .mat-sidenav-content {
   padding: 20px;
   background-color: var(--main-background-color);
+  transition: margin-left 0.3s ease;
+  margin-left: 70px !important;
 }
 
 /* For sidebar toggle button when collapsed */
@@ -107,4 +110,41 @@ mat-list-item {
 
 .mat-icon-button {
   margin-left: auto; /* Pushes close button to the right */
+}
+
+.burger-menu {
+  top: 29px;
+  z-index: 3;
+  right: 25px;
+  cursor: pointer;
+  position: absolute;
+  transition: var(--transition);
+
+  span {
+      height: 1px;
+      width: 25px;
+      margin: 6px 0;
+      display: block;
+      background: var(--blackColor);
+      transition: var(--transition);
+  }
+  &.active {
+      opacity: 1;
+      visibility: visible;
+      
+      span {
+          &.top-bar {
+              transform: rotate(45deg);
+              transform-origin: 10% 10%;
+          }
+          &.middle-bar {
+              opacity: 0;
+          }
+          &.bottom-bar {
+              transform: rotate(-45deg);
+              transform-origin: 10% 90%;
+              margin-top: 5px;
+          }
+      }
+  }
 }
